@@ -19,8 +19,8 @@
 <!-- For the regular version, the versionCode must be odd. -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
         package="org.tlhInganHol.android.klingonassistant"
-        android:versionCode="229"
-        android:versionName="2014.04.29a"
+        android:versionCode="232"
+        android:versionName="2014.06.14a (TTS)"
         android:installLocation="auto">
 
     <!-- Minimum Android version 2.1 (7), targeted version 4.4 (19). -->
