@@ -262,7 +262,7 @@
 
     <!-- Strings for the ShowcaseView tutorial. -->
     <string name="tutorial_1_title">qavan! (I salute you!)</string>
-    <string name="tutorial_1_msg">This tutorial gives a brief overview of boQwI\'.\n\n* Latest changes *\n2014-04-29: Added Text-To-Speech integration (requires JellyBean).\n2014-04-10: Added tutorial, request translation feature.</string>
+    <string name="tutorial_1_msg">This tutorial gives a brief overview of boQwI\'.\n\n* Latest changes *\n2014-06-14: Minor edits to database.\n2014-04-29: Added Text-To-Speech integration (requires JellyBean).</string>
     <string name="tutorial_2_title">Search</string>
     <string name="tutorial_2_msg">Use this to search the database. You can search using Klingon or English.</string>
     <string name="tutorial_3_title">Resources</string>
